Fix: Read CORS_ALLOWED_ORIGINS from environment variable
- SecurityConfig now uses app.cors.allowed-origins property
- Parses comma-separated origins from CORS_ALLOWED_ORIGINS env var
- Also fixes tps column type (DECIMAL to DOUBLE PRECISION)